# ignite

./: .gitignore  404.html  LICENSE  NOTICE  README.md  __init__.py  api.py  client.py  client_main.py  config.yaml  ignite.code-workspace  index.html  main.py  package-lock.json  package.json  requirements.txt  server_main.py  sitemap.xml  start_dev_linux  start_dev_win.bat  tools_cleanup.py  utils.py
.github/workflows/: build.yaml  deploy.yaml
assets/css/: styles.0a57312f.css
assets/js/: 29720779.edce9ac9.js  3b8c55ea.0157b7e5.js  74a803a9.89de6a48.js  92bb876c.7bfcc155.js  935f2afb.82f3050d.js  a3cbdead.9787379c.js  c4f5d8e4.81b48f04.js  e747ec83.7f65bc57.js  f56d8649.f855f456.js  f5e03ab8.86b2e2d6.js  main.8f1d1d9e.js  runtime~main.f775fda2.js
backend/: .gitignore  IgniteClientBackend.spec  IgniteServer.spec  build_and_copy.py  ignite.spec  requirements.txt  requirements_linux.txt  requirements_mac.txt  requirements_win.txt  setup.py
backend/env_old/: pyvenv.cfg
backend/env_old/Scripts/: activate  activate.bat  futurize-script.py  (+3 more)
cg/houdini/: MainMenuCommon.xml
client/: constants.py  utils.py
common/: ignite.db  ignite.db-shm  ignite.db-wal  server_config.yaml
config/: server_config.yaml
dcc/default_scenes/: default_scenes.yaml  scene.ma
docs/: basic_concepts.html  docusaurus.config.js  getting_started.html  glossary.html  installation.html  package-lock.json
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
docs/Developer/: python_api.html  rest_api.html
docs/docs/: basic_concepts.md  getting_started.md  glossary.md  installation.md
entities/: asset.py  assetversion.py  build.py  directory.py  phase.py  project.py  scene.py  sequence.py  shot.py  task.py
env/Scripts/: activate  activate.bat
frontend/: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.yaml  electron-builder.yml  electron.vite.config.1680920461692.mjs  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
frontend/coverage/: DynamicList.tsx.html  clover.xml  coverage-final.json  index.html
frontend/public/: index.html  main.js  manifest.json  preload.js  splash.css  splash.html
frontend/scripts/: notarize.js
frontend/src/: App.css  App.jsx  index.js
ignResolver/: CMakeLists.txt  OLD_CMakeLists.txt  ORIG_CMakeLists.txt  build_windows.bat  env.ps1  plugInfo.json
ignResolver/cmake/: FindUSD.cmake
ignResolver/source/: CMakeLists.txt  _ignResolver.cpp  _ignResolver.h  ignResolver.cpp  ignResolver.h
tools/darwin/: oiiotool
tools/ffmpeg/: VERSION
tools/linux/: oiiotool
tools/win/: ffmpeg.lnk  magick.lnk  oiiotool.lnk
ui/: package-lock.json  package.json
ui/public/: main.js  preload.js
ui/src/: App.css  App.jsx
usd_resolver/: CMakeLists.txt  plugInfo.json
usd_resolver/source/: ignResolver.cpp
(+1118 files in other folders)
